# TravisReleasePoC

./: .travis.yml  CMakeLists.txt
src/: lib.cpp
